# 2025-team-D

./: README.md  docker-compose.yml
frontend/components/Header/: Header.vue
frontend/pages/register-plugins/: index.vue
plugin-registry/: .env.example  Dockerfile  pyproject.toml
plugin-registry/app/: build.py  database.py  logger.py  main.py  minio_client.py  models.py  utils.py
plugins-backend/chatbot/: Dockerfile  config.ini  pyproject.toml
plugins-backend/chatbot/app/: agent.py  main.py  tools.py
promptme/: .env.example  Dockerfile  pyproject.toml
promptme/app/: agent.py  app.py  prompts.py
resource/plugin-template/: README.md  vite.config.ts
resource/plugin-template/src/: App.vue
sparc-app-2/: .dockerignore  .env.template  .gitignore  Dockerfile  nuxt.config.ts  package.json
sparc-app-2/components/FancyModal/: FancyModal.vue
sparc-app-2/components/Header/: Header.vue
sparc-app-2/components/RemoteComponentApp/: RemoteComponentApp.vue
sparc-app-2/pages/register-plugins/: index.vue
sparc-app-2/pages/remote/: index.vue
sparc-app-2/plugins/: vue-window.ts
sparc-app-2/public/: metadata.json
sparc-app-2/public/my-test-app/: my-app.umd.js
sparc-app-2/public/my_digitaltwins/: human_view.json  my_digitaltwin.umd.js
sparc-app-2/public/segmentation-app/: nrrd_view_coronal.json  nrrd_view_sagittal.json  segmentation_app.umd.js
sparc-app-2/store/: remoteStore.ts
sparc-app-2/utils/: vuetify.ts
tutorials/: tutorial-1.md  tutorial-2.md  tutorial-3.md  tutorial-4.md  tutorial-5.md  tutorial-template.md
(+2 files in other folders)
