[project]
name = "chatbot"
version = "0.1.0"
description = "Chatbot plugin for SPARC Datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "openai-agents>=0.2.4",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.1",
    "sparc-client>=0.3.99",
]
